Add client list

--- a/app/config/config_dev.yml
+++ b/app/config/config_dev.yml
@@ -25,3 +25,7 @@ monolog:
 swiftmailer:
     disable_delivery: true
 #    delivery_addresses: ['me@example.com']#
+
+khepin_yaml_fixtures:
+    resources:
+        - AppBundle
