--- a/src/AppBundle/DataFixtures/001-address.yml
+++ b/src/AppBundle/DataFixtures/001-address.yml
@@ -1,11 +1,11 @@
 model: AppBundle\Entity\Address
 fixtures:
-    addr_6pierres:
+    address_001:
         address: "Les croix chemins"
         zipCode: "28480"
         city: "Saint Denis d'Authou"
         country: "France"
-    addr_ptitatelier:
+    address_002:
         address: "32 av. des Etats Unis"
         zipCode: "52000"
         city: "Chaumont"
