--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -19,7 +19,6 @@ framework:
         engines: ['twig']
     default_locale: '%locale%'
     trusted_hosts: ~
-    trusted_proxies: ~
     session:
         handler_id:  session.handler.native_file
         save_path:   "%kernel.root_dir%/../var/sessions/%kernel.environment%"
@@ -33,6 +32,9 @@ framework:
 twig:
     debug: '%kernel.debug%'
     strict_variables: '%kernel.debug%'
+    form_themes:
+         - 'bootstrap_3_layout.html.twig'
+         - 'AppBundle::Theme/jquery.collection.html.twig'
 
 # Doctrine Configuration
 doctrine:
