Feature - Invoice view pdf

--- a/app/config/services.yml
+++ b/app/config/services.yml
@@ -16,3 +16,8 @@ services:
     Doctrine\ORM\EntityManager:
         alias: doctrine.orm.default_entity_manager
         public: false
+
+    twig.extension.intl:
+        class: Twig_Extensions_Extension_Intl
+        tags:
+            - { name: twig.extension }
