--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -59,3 +59,9 @@ swiftmailer:
     username: '%mailer_user%'
     password: '%mailer_password%'
     spool: { type: memory }
+
+# Snappy Configuration
+knp_snappy:
+    pdf:
+        enabled: true
+        binary: D:\applications\wkhtmltopdf\bin\wkhtmltopdf.exe
