--- a/composer.json
+++ b/composer.json
@@ -26,6 +26,8 @@
         "doctrine/orm": "^2.5",
         "incenteev/composer-parameter-handler": "^2.0",
         "khepin/yaml-fixtures-bundle": "^1.0",
+        "knplabs/knp-snappy": "^0.4.3",
+        "knplabs/knp-snappy-bundle": "^1.4",
         "ninsuo/symfony-collection": "^2.1",
         "sensio/distribution-bundle": "^5.0",
         "sensio/framework-extra-bundle": "^3.0.2",
@@ -33,6 +35,7 @@
         "symfony/polyfill-apcu": "^1.0",
         "symfony/swiftmailer-bundle": "^2.3.10",
         "symfony/symfony": "3.3.*",
+        "twig/extensions": "^1.5",
         "twig/twig": "^1.0||^2.0"
     },
     "require-dev": {
