Improvement - Markdown + Date Picker

--- a/composer.json
+++ b/composer.json
@@ -24,9 +24,9 @@
         "doctrine/doctrine-bundle": "^1.6",
         "doctrine/doctrine-cache-bundle": "^1.2",
         "doctrine/orm": "^2.5",
+        "erusev/parsedown": "^1.6",
         "incenteev/composer-parameter-handler": "^2.0",
         "khepin/yaml-fixtures-bundle": "^1.0",
-        "knplabs/knp-markdown-bundle": "^1.5",
         "knplabs/knp-snappy": "^0.4.3",
         "knplabs/knp-snappy-bundle": "^1.4",
         "ninsuo/symfony-collection": "^2.1",
