--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -33,7 +33,7 @@ twig:
     debug: '%kernel.debug%'
     strict_variables: '%kernel.debug%'
     form_themes:
-         - 'bootstrap_3_horizontal_layout.html.twig'
+         - 'bootstrap_3_layout.html.twig'
          - 'AppBundle::Theme/jquery.collection.html.twig'
 
 # Doctrine Configuration
