Feature - Login form

--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -1,13 +1,26 @@
 security:
+    encoders:
+        AppBundle\Entity\User: bcrypt
+
     providers:
-        in_memory:
-            memory: ~
+        main:
+            entity:
+                class: AppBundle\Entity\User
+                property: email
 
     firewalls:
-        # disables authentication for assets and the profiler, adapt it according to your needs
         dev:
             pattern: ^/(_(profiler|wdt)|css|images|js)/
             security: false
 
         main:
             anonymous: ~
+            form_login:
+                login_path: login
+                check_path: login_check
+            logout:
+                path: logout
+
+    access_control:
+        - { path: ^/sign-in, roles: "IS_AUTHENTICATED_ANONYMOUSLY" }
+        - { path: ^/, roles: "ROLE_USER" }
